# DigitalRain

./: .devkit.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  USAGE.txt  release-please-config.json
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: REQUIREMENTS.md
scripts/: pre-push
src/: buffer.rs  config.rs  crt.rs  main.rs  overlay.rs  terminal.rs  timing.rs  transition.rs
src/color/: css_colors.rs  gradient.rs  hsl.rs  mod.rs  palette.rs
src/effects/: binary.rs  cascade.rs  classic.rs  fire.rs  glitch.rs  mod.rs  ocean.rs  parallax.rs  pulse.rs  registry.rs
src/rain/: chars.rs  column.rs  mod.rs
